compiler/tests/cases/should-compile/grouped-expressions.aml
let IO = use "System.Effects.IO"

let functionA = a -> a
let functionB = a -> a - 1

let main = _ ->
    IO.from (functionA (functionB 1))
